# interview-samples

./: .gitignore  README.md
easing_curve/: CMakeLists.txt  README.md  main.cpp
easing_curve/include/: common.hpp  easing_curve_generator.hpp  easing_data_parser.hpp  easing_file_parser.hpp  easing_input_data.hpp  easing_output_generator.hpp  toolkit.hpp
easing_curve/input/: fail_00.txt  multiple_curves.txt  one_curve.txt  two_curves.txt
easing_curve/src/: easing_curve_generator.cpp  easing_data_parser.cpp  easing_file_parser.cpp  easing_output_generator.cpp
easing_curve/test/: test_data_parser.cpp  test_easing_generator.cpp  test_file_parser.cpp  test_input_data.cpp  test_toolkit.cpp
memory_game/: MemoryGame.pro  cellmodel.cpp
memory_game/qml/: main.qml
memorygame/: README.md  cell.cpp  cell.hpp  cellmodel.hpp  main.cpp  resources.qrc
memorygame/qml/: Cell.qml
mrmc/: answers.md
mrmc/c++/: CMakeLists.txt  ReadMe.md  header.hpp  source.cpp  test_source.cpp
mrmc/qml/spinbox/: Button.qml  SpinBox.qml  main.qml  parseInt.js  qml.qrc
tic_tac_toe/: README.md  resource.qrc
tic_tac_toe/include/: Common.h  Game.h  GameManager.h  Strategy.h
tic_tac_toe/src/: Game.cpp  Player.cpp  Strategy.cpp
tic_tac_toe/test/: game_manager_test.cpp  game_test.cpp
tic_tac_toe/ui/: Form.ui
tictactoe/: TicTacToe.pro
tictactoe/include/: Board.h  Form.h  Player.h
tictactoe/src/: Board.cpp  Form.cpp  GameManager.cpp  main.cpp
tictactoe/test/: board_test.cpp  player_test.cpp  strategy_test.cpp
